--- a/assets/less/global/index.less
+++ b/assets/less/global/index.less
@@ -5,110 +5,121 @@ html {
 }
 
 body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  min-width: 1077px;
+  min-height: 100%;
+  position: relative;
+  background: #2E97DE;
+  .reset-box-model();
+
+  * {
+    outline: none;
+    -webkit-font-smoothing: subpixel-antialiased;
+  }
+
+  ul {
+  	list-style: none;
+  }
+
+  a {
+    color: inherit;
+  	text-decoration: none;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  .left {
+  	.float-left();
+  }
+
+  .right {
+  	.float-right();
+  }
+
+  .center {
+  	margin-left: auto;
+  	margin-right: auto;
+  }
+
+  .text-left {
+    text-align: left;
+  }
+
+  .text-center {
+    text-align: center;
+  }
+
+  .text-right {
+    text-align: right;
+  }
+
+  .clear {
+  	float: none;
+  	clear: both;
+  	.clearfix();
+  }
+
+  .full {
+  	float: none;
+  	clear: both;
+  	margin: 0;
+  	width: 100%;
+  }
+
+  .disabled {
+      opacity: .8;
+  }
+
+  .container {
+    position: relative;
+    z-index: 3;
+    width: 900px;
+    margin: 0 auto;
+  }
+
+  *:disabled {
+      opacity: .8;
+  }
+
+  canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  opacity: 0.5;
+  }
+
+  input,
+  button,
+  select,
+  textarea {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    outline: none;
+    border: none;
+    margin: 2px 0px;
+    .border-radius(0);
+    .box-shadow(none);
+    .box-sizing(border-box);
+  }
+
+  input:not([type="radio"]):not([type="checkbox"]),
+  select, textarea {
+    .appearance(none);
+  }
+
+  pre {
     margin: 0;
     padding: 0;
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    min-width: 1077px;
-    min-height: 100%;
-    position: relative;
-    .reset-box-model();
+  }
 
-    * {
-        outline: none;
-        -webkit-font-smoothing: subpixel-antialiased;
-    }
-
-    ul {
-    	list-style: none;
-    }
-
-    a {
-        color: inherit;
-    	text-decoration: none;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    .left {
-    	.float-left();
-    }
-
-    .right {
-    	.float-right();
-    }
-
-    .center {
-    	margin-left: auto;
-    	margin-right: auto;
-    }
-
-    .text-left {
-        text-align: left;
-    }
-
-    .text-center {
-        text-align: center;
-    }
-
-    .text-right {
-        text-align: right;
-    }
-
-    .clear {
-    	float: none;
-    	clear: both;
-    	.clearfix();
-    }
-
-    .full {
-    	float: none;
-    	clear: both;
-    	margin: 0;
-    	width: 100%;
-    }
-
-    .disabled {
-        opacity: .8;
-    }
-
-    .container {
-        position: relative;
-        z-index: 3;
-        width: 900px;
-        margin: 0 auto;
-    }
-
-    *:disabled {
-        opacity: .8;
-    }
-
-    input,
-    button,
-    select,
-    textarea {
-        font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-        outline: none;
-        border: none;
-        margin: 2px 0px;
-        .border-radius(0);
-        .box-shadow(none);
-        .box-sizing(border-box);
-    }
-
-    input:not([type="radio"]):not([type="checkbox"]),
-    select, textarea {
-        .appearance(none);
-    }
-
-    pre {
-        margin: 0;
-        padding: 0;
-    }
-
-    iframe {
-        outline: none;
-        border: none;
-    }
+  iframe {
+    outline: none;
+    border: none;
+  }
 }
