--- a/views/home/index.html
+++ b/views/home/index.html
@@ -1,3 +1,10 @@
 <% include ../includes/header.html %>
-test
+<div class="center hAlign vAlign">
+  <div class="logo">EnjoyPnD</div>
+  <form class="form" action="/login">
+    <input class="input" name="email" type="email" value="demo@demo.com" placeholder="Email" required autofocus />
+    <input class="input" name="password" type="password" value="demo" placeholder="Password" required />
+    <input class="button" type="submit" value="Log In :)" />
+  </form>
+</div>
 <% include ../includes/footer.html %>
