finished the registration page

--- a/assets/less/global/index.less
+++ b/assets/less/global/index.less
@@ -1,7 +1,9 @@
 @import '../compless/all';
 
 html {
-    height: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -11,7 +13,7 @@ body {
   min-width: 1077px;
   min-height: 100%;
   position: relative;
-  background: #2E97DE;
+  background: #85BB39;
   .reset-box-model();
 
   * {
@@ -71,7 +73,7 @@ body {
   }
 
   .disabled {
-      opacity: .8;
+    opacity: .8;
   }
 
   .container {
@@ -82,17 +84,17 @@ body {
   }
 
   *:disabled {
-      opacity: .8;
+    opacity: .8;
   }
 
   canvas {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  opacity: 0.5;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 1;
+    opacity: 0.5;
   }
 
   input,
@@ -121,5 +123,10 @@ body {
   iframe {
     outline: none;
     border: none;
+  }
+
+  & > .container {
+    position: relative;
+    z-index: 2;
   }
 }
