--- a/assets/less/register/index.less
+++ b/assets/less/register/index.less
@@ -1,6 +1,7 @@
 @import '../compless/all';
 @bodyWidth: 800px;
-@buttonBackground: #F95339;
+@buttonBackground: #009688;
+@buttonShareBackground: #3F51B5;
 
 .header {
   width: @bodyWidth;
@@ -54,6 +55,20 @@
       }
     }
 
+    .radio-group {
+      margin: 0 35px 25px 0;
+      .float-left();
+
+      span {
+        font-family: 'Droid Sans', sans-serif;
+        font-size: 24px;
+        color: #fff;
+        font-weight: bold;
+        margin-left: 4px;
+        display: inline-block;
+      }
+    }
+
     .input-image {
       position: relative;
 
@@ -91,6 +106,7 @@
   left: 0;
   right: 0;
   padding: 40px;
+  min-height: 60px;
   background: rgba(0, 0, 0, 0.2);
   border-top: solid 1px rgba(0, 0, 0, 0.4);
   .box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.2));
@@ -128,6 +144,41 @@
           background: #fff;
           .border-radius(8px);
           .transition(width);
+        }
+      }
+    }
+
+    .next {
+      text-align: center;
+      min-width: 110px;
+      cursor: pointer;
+      padding: 12px 25px;
+      background: @buttonBackground;
+      color: #fff;
+      font-size: 20px;
+      font-weight: bold;
+      font-family: 'Droid Sans', sans-serif;
+      text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+      border: solid 1px rgba(0, 0, 0, 0.4);
+      .box-sizing(border-box);
+      .box-shadow(~"inset 0 1px  0 rgba(255, 255, 255, 0.2), 0 0 2px rgba(0, 0, 0, 0.2)");
+      .border-radius(4px);
+      .float-right();
+      .transition(all);
+
+      &:hover {
+        background: darken(@buttonBackground, 5%);
+
+        &:active {
+          .box-shadow(~"inset 0 1px  0 rgba(0, 0, 0, 0.2), 0 0 2px rgba(0, 0, 0, 0.2)");
+        }
+      }
+
+      &.share {
+        background: @buttonShareBackground;
+
+        &:hover {
+          background: darken(@buttonShareBackground, 5%);
         }
       }
     }
