added redirect and fixed share

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -1,6 +1,6 @@
 <% include ../includes/header.html %>
 <div class="header">
-  <div class="logo">EasyBin</div>
+  <a class="logo" href="/">EasyBin</a>
 </div>
 <div class="questions">
   <form class="question">
