better error messages

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -49,7 +49,7 @@
     <div class="title">
       Finally, what <strong>day</strong> is your garbage picked up?
     </div>
-    <input class="input" type="hidden" name="day"/>
+    <input class="input" type="hidden" name="day" value="null"/>
     <div class="radio-group">
       <input class="radio" type="radio" name="dayR" value="Monday"/>
       <span>Monday</span>
@@ -79,7 +79,7 @@
       <span>Sunday</span>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" checked/>
+      <input class="radio" type="radio" name="dayR" value="null" checked/>
       <span>I don't remember</span>
     </div>
   </form>
