--- a/assets/less/register/index.less
+++ b/assets/less/register/index.less
@@ -1,10 +1,9 @@
 @import '../compless/all';
-@bodyWidth: 800px;
 @buttonBackground: #009688;
 @buttonShareBackground: #3F51B5;
 
 .header {
-  width: @bodyWidth;
+  width: 800px;
   margin: 0 auto;
   padding: 50px 0 80px 0;
   .clearfix();
@@ -20,7 +19,7 @@
 }
 
 .questions {
-  width: @bodyWidth;
+  width: 800px;
   margin: 0 auto;
 
   .question {
@@ -112,7 +111,7 @@
   .box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.2));
 
   .container {
-    width: @bodyWidth;
+    width: 800px;
     margin: 0 auto;
     .clearfix();
 
