finished account page v1

--- a/assets/less/home/index.less
+++ b/assets/less/home/index.less
@@ -186,5 +186,13 @@
     padding: 20px 0;
     text-align: center;
     color: #ededed;
+
+    a {
+      color: #64B5F6;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 }
