--- a/views/home/index.html
+++ b/views/home/index.html
@@ -39,6 +39,9 @@
   <div class="footer">
     Made with love in Santa Cruz.
     We start operations in early March, see you then!
+    <br>
+    Contact us at anytime at
+    <a href="mailto:vallelungabrian@gmail.com">vallelungabrian@gmail.com</a>
   </div>
 </div>
 <% include ../includes/footer.html %>
