--- a/views/register/index.html
+++ b/views/register/index.html
@@ -17,6 +17,13 @@
     </div>
     <input class="input" name="email" type="email" required/>
   </form>
+  </form>
+   <form class="question">
+    <div class="title">
+      And the <strong>password</strong> for the account?
+    </div>
+    <input class="input" name="password" type="password" required/>
+  </form>
   <form class="question">
     <div class="title">
       Great, what's the <strong>address</strong> we're serving?
