--- a/assets/less/global/index.less
+++ b/assets/less/global/index.less
@@ -11,7 +11,7 @@ body {
   padding: 0;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   min-width: 1077px;
-  min-height: 100%;
+  height: 100%;
   position: relative;
   background: #85BB39;
   .reset-box-model();
@@ -83,6 +83,7 @@ body {
   & > .container {
     position: relative;
     z-index: 2;
+    min-height: 100%;
   }
 
   & > canvas {
