--- a/views/register/index.html
+++ b/views/register/index.html
@@ -26,7 +26,7 @@
   </form>
   <form class="question">
     <div class="title">
-      Great, what's the <strong>address</strong> we're serving?
+      Great, what's the <strong>home address</strong> we're serving?
     </div>
     <input class="input address" name="address" type="text" required/>
   </form>
@@ -42,13 +42,14 @@
   </form>
   <form class="question">
     <div class="title">
-      Now the card's <strong>expiration date</strong>
+      Now the card's <strong>expiration date (MM/YY)</strong>
     </div>
     <input class="input expiration" name="expiration" type="text" required/>
   </form>
   <form class="question">
     <div class="title">
-      And the card's <strong>CVC number</strong>
+      And the card's <strong>CVC number</strong>, which is a 3-4
+      digit security code found on the back.
     </div>
     <input class="input cvc" name="cvc" type="text" required/>
   </form>
