--- a/assets/less/account/index.less
+++ b/assets/less/account/index.less
@@ -36,20 +36,40 @@
   }
 }
 
-.banner {
-  line-height: 36px;
-  text-align: center;
-  color: #fff;
+.dashboard {
   width: 800px;
   margin: 0 auto 20px auto;
-  padding: 20px 10px;
-  font-size: 22px;
-  font-weight: bold;
-  font-family: 'Droid Sans', sans-serif;
-  background: rgba(0, 0, 0, 0.1);
   border: solid 1px rgba(0, 0, 0, 0.4);
-  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+  background: rgba(0, 0, 0, 0.1);
+  font-family: 'Droid Sans', sans-serif;
   .box-shadow(~"inset 0 1px 0 rgba(255, 255, 255, 0.2), inset 0 -1px 0 rgba(0, 0, 0, 0.1)");
   .box-sizing(border-box);
   .border-radius(4px);
+
+  .banner {
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
+    padding: 20px 10px;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.1);
+  }
+
+  .forms {
+    .clearfix();
+
+    .form {
+      padding: 20px 10px;
+      border-left: solid 1px rgba(0, 0, 0, 0.4);
+      width: 33.33%;
+      .box-sizing(border-box);
+      .float-left();
+
+      &:first-child {
+        border-left: none;
+      }
+    }
+  }
 }
