--- a/assets/less/register/index.less
+++ b/assets/less/register/index.less
@@ -42,17 +42,17 @@
     .input {
       width: 100%;
       background: transparent;
-      padding: 20px 10px;
+      padding: 20px 12px;
       font-family: 'Droid Sans', sans-serif;
       font-size: 36px;
       color: #fff;
       font-weight: bold;
       text-shadow: 0 2px 0 rgba(0, 0, 0, 0.05);
-      margin: 0 -10px;
+      margin: 0 -12px;
       border: dashed 4px rgba(255, 255, 255, 0.6);
       .transition(border-color);
 
-      &:focus {
+      &:focus:hover {
         border-color: transparent;
       }
 
@@ -85,7 +85,7 @@
       .card-type {
         position: absolute;
         top: 28px;
-        right: 0;
+        right: 25px;
         width: 50px;
         display: none;
       }
@@ -193,4 +193,19 @@
       }
     }
   }
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+  color: rgba(255, 255, 255, 0.8);
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color:    rgba(255, 255, 255, 0.8);
+  opacity:  1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color:    rgba(255, 255, 255, 0.8);
+  opacity:  1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  color:    rgba(255, 255, 255, 0.8);
 }
