made register page better

--- a/views/register/index.html
+++ b/views/register/index.html
@@ -59,36 +59,36 @@
     </div>
     <input class="input" type="hidden" name="day" value="null"/>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Monday"/>
-      <span>Monday</span>
+      <input class="radio" type="radio" name="dayR" id="dayMonday" value="Monday"/>
+      <label for="dayMonday">Monday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Tuesday"/>
-      <span>Tuesday</span>
+      <input class="radio" type="radio" name="dayR" id="dayTuesday" value="Tuesday"/>
+      <label for="dayTuesday">Tuesday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Wednesday"/>
-      <span>Wednesday</span>
+      <input class="radio" type="radio" name="dayR" id="dayWednesday" value="Wednesday"/>
+       <label for="dayWednesday">Wednesday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Thursday"/>
-      <span>Thursday</span>
+      <input class="radio" type="radio" name="dayR" id="dayThursday" value="Thursday"/>
+       <label for="dayThursday">Thursday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Friday"/>
-      <span>Friday</span>
+      <input class="radio" type="radio" name="dayR" id="dayFriday" value="Friday"/>
+       <label for="dayFriday">Friday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Saturday"/>
-      <span>Saturday</span>
+      <input class="radio" type="radio" name="dayR" id="daySaturday" value="Saturday"/>
+       <label for="daySaturday">Saturday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="Sunday"/>
-      <span>Sunday</span>
+      <input class="radio" type="radio" name="dayR" id="daySunday" value="Sunday"/>
+       <label for="daySunday">Sunday</label>
     </div>
     <div class="radio-group">
-      <input class="radio" type="radio" name="dayR" value="null" checked/>
-      <span>I don't remember</span>
+      <input class="radio" type="radio" name="dayR" id="dayIDR" value="null" checked/>
+       <label for="dayIDR">I don't remember</label>
     </div>
   </form>
   <div class="question finished">
