--- a/assets/less/register/index.less
+++ b/assets/less/register/index.less
@@ -69,13 +69,14 @@
       margin: 0 35px 25px 0;
       .float-left();
 
-      span {
+      label {
         font-family: 'Droid Sans', sans-serif;
         font-size: 24px;
         color: #fff;
         font-weight: bold;
         margin-left: 4px;
         display: inline-block;
+        cursor: pointer;
       }
     }
 
